--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -60,6 +60,7 @@ jobs:
         working-directory: ./sdss-website
         run: pnpm install
       - name: Build
+        working-directory: ./sdss-website
         run: pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
