--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -63,9 +63,10 @@ jobs:
         working-directory: ./sdss-website
         run: pnpm build
       - name: Upload artifact
+        working-directory: ./sdss-website
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./next
 
   # Deployment job
   deploy:
