--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./next
+          path: ./sdss-website/.next
 
   # Deployment job
   deploy:
