--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -62,6 +62,9 @@ jobs:
       - name: Build
         working-directory: ./sdss-website
         run: pnpm build
+      - name: Export static files
+        working-directory: ./sdss-website
+        run: pnpm export
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
