--- a/sdss-website/package.json
+++ b/sdss-website/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5",
+    "next": ">=14.2.10",
     "daisyui": "^3.4.0"
   },
   "devDependencies": {
