--- a/sdss-website/package.json
+++ b/sdss-website/package.json
@@ -10,19 +10,19 @@
     "export": "next export"
   },
   "dependencies": {
+    "daisyui": "^3.4.0",
+    "next": "^14.2.23",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5",
-    "daisyui": "^3.4.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
