--- a/sdss-website/package.json
+++ b/sdss-website/package.json
@@ -13,12 +13,14 @@
     "daisyui": "^3.4.0",
     "next": "^14.2.23",
     "nodemailer": "^7.0.9",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
