--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -391,3 +391,14 @@ entrypoint = "./functions/newsletter-signup/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/newsletter-signup/*.html" ]
+
+[functions.member-registration]
+enabled = true
+verify_jwt = true
+import_map = "./functions/member-registration/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/member-registration/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/member-registration/*.html" ]
